# snowmelt-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
coupling/: Cargo.toml  README.md
coupling/src/: main.rs
crates/snowmelt-cli/: Cargo.toml
crates/snowmelt-cli/src/: asc.rs  forcing_csv.rs  lib.rs  main.rs  solar.rs
crates/snowmelt-core/: Cargo.toml
crates/snowmelt-core/src/: balance.rs  dem.rs  downscale.rs  energy.rs  error.rs  forcing.rs  lib.rs  metrics.rs  model.rs  params.rs  routing.rs  terrain.rs
crates/snowmelt-core/tests/: simulation.rs
crates/snowmelt-python/: Cargo.toml  pyproject.toml
crates/snowmelt-python/src/: lib.rs
examples/: dem.asc  forcing.csv
out-eti/: series.csv  swe_final.asc
validation/choapa-cuncumen/: README.md  build_catchment.py  validate_flow.py
validation/maipo-alto/: FORCING_SENSITIVITY.md  README.md  SUBLIMATION.md  calibrate.py  fetch_data.py
validation/swe-andes-sr/: README.md
