[workspace]
resolver = "3"
members = ["crates/snowmelt-core", "crates/snowmelt-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Francisco Parra O. <gran.huja@gmail.com>"]

[workspace.dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
snowmelt-core = { path = "crates/snowmelt-core", version = "0.1.0" }

[profile.release]
lto = true
codegen-units = 1
