[workspace]
resolver = "3"
members = ["crates/snowmelt-core", "crates/snowmelt-cli", "crates/snowmelt-python"]
# El crate Python (extension-module) se compila aparte con maturin.
default-members = ["crates/snowmelt-core", "crates/snowmelt-cli"]

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Francisco Parra O. <gran.huja@gmail.com>"]

[workspace.dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
surtgis-core = { version = "0.15", default-features = false }
surtgis-algorithms = "0.15"
snowmelt-core = { path = "crates/snowmelt-core", version = "0.6.0" }

[profile.release]
lto = true
codegen-units = 1
