[package]
name = "snowmelt-cli"
description = "CLI for the snowmelt-rs distributed degree-day snow model"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "snowmelt_cli"
path = "src/lib.rs"

[[bin]]
name = "snowmelt"
path = "src/main.rs"

[[bin]]
name = "snowmelt-validate"
path = "src/bin/validate.rs"

[dependencies]
snowmelt-core = { workspace = true }
ndarray = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
surtgis-core = { workspace = true }
surtgis-algorithms = { workspace = true }
