[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "snowmelt"
description = "Distributed degree-day / ETI snow model over a DEM (Rust core)"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
dynamic = ["version"]
dependencies = ["numpy>=1.24"]

[tool.maturin]
module-name = "snowmelt"
